FSL/force-app/main/default/objects/Asset/fields/FSL_EnergyEquipementType__c.field-meta.xml
<CustomField>
    <fullName>FSL_EnergyEquipementType__c</fullName>
    <description>MB-3875</description>
    <label>Energy Equipement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
                <default>true</default>
                <label>CPT</label>
            </value>
            <value>
                <fullName>STK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>