FSL/force-app/main/default/objects/Asset/fields/FSL_MeasureUnit__c.field-meta.xml
<CustomField>
    <fullName>FSL_MeasureUnit__c</fullName>
    <description>MB-3875</description>
    <label>Measure Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>