FSL/force-app/main/default/objects/Asset/fields/FSL_P1__c.field-meta.xml
<CustomField>
    <fullName>FSL_P1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MB-3875</description>
    <label>P1</label>
    <type>Checkbox</type>
</CustomField>