FSL/force-app/main/default/objects/Asset/fields/FSL_Readable__c.field-meta.xml
<CustomField>
    <fullName>FSL_Readable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MB-3875</description>
    <label>Readable</label>
    <type>Checkbox</type>
</CustomField>